# ClawGuard

./: README.md  install.sh  main.py  pyproject.toml  requirements.txt  setup.py
clawguard/: __init__.py  api.py  approval.py  audit.py  cli.py  normalizer.py  panic.py  rules.py  sanitizer.py  script_analyzer.py  skill_check.py
clawguard/dashboard/: app-enhanced.js  app.js  index-enhanced.html  index.html  style.css
config/: config.yaml  rules.yaml
openclaw-plugin/: SKILL.md  index.js  openclaw.plugin.json  package.json
openclaw-plugin/legacy/: SKILL.md  index.js
openclaw-plugin/v5/: SKILL.md  index.js  openclaw.plugin.json  package.json
tests/: transform.js
